# UltrasonicProject

./: .gitignore  README.md  tatus
data/All_Data/big_box_sensor_50cm/: 7 _9 3.csv  7_10 1.csv  7_10 10.csv  7_10 10_filtered.csv  7_10 11.csv  7_10 11_1.csv  7_10 11_1_filtered.csv  7_10 11_2.csv  7_10 11_3.csv  7_10 11_3_filtered.csv  7_10 11_filtered.csv  7_10 12.csv  7_10 12_1.csv  7_10 12_2.csv  7_10 12_2_filtered.csv  7_10 12_filtered.csv  7_10 13.csv  7_10 13_1.csv  7_10 13_1_filtered.csv  7_10 13_filtered.csv  7_10 14.csv  7_10 14_1.csv  7_10 14_1_filtered.csv  7_10 14_filtered.csv  7_10 15.csv  7_10 15_filtered.csv  7_10 16.csv  7_10 16_filtered.csv  7_10 17.csv  7_10 17_filtered.csv  7_10 1_1.csv  7_10 1_1_filtered.csv  7_10 1_2.csv  7_10 1_2_filtered.csv  7_10 1_filtered.csv  7_10 2.csv  7_10 2_1.csv  7_10 2_1_filtered.csv  7_10 2_filtered.csv  7_10 3.csv  (+963 more)
data/All_Data/big_jalon_sensor_50cm/: 5_10 1.csv  5_10 10.csv  5_10 10_filtered.csv  5_10 11.csv  5_10 11_filtered.csv  5_10 12.csv  5_10 12_filtered.csv  5_10 13.csv  5_10 13_filtered.csv  5_10 14.csv  5_10 14_filtered.csv  5_10 15.csv  5_10 15_filtered.csv  5_10 16.csv  5_10 16_filtered.csv  5_10 1_filtered.csv  5_10 2.csv  5_10 2_filtered.csv  5_10 3.csv  5_10 3_filtered.csv  5_10 4.csv  5_10 4_filtered.csv  5_10 5.csv  5_10 5_filtered.csv  5_10 6.csv  5_10 6_filtered.csv  5_10 7.csv  5_10 7_filtered.csv  5_10 8.csv  5_10 8_filtered.csv  5_10 9.csv  5_10 9_filtered.csv  5_11 1.csv  5_11 10.csv  5_11 10_filtered.csv  5_11 11.csv  5_11 11_filtered.csv  5_11 12.csv  5_11 12_filtered.csv  5_11 13.csv  (+293 more)
data/All_Data/big_pole_sensor_30cm/: 4 _18 4.csv  4 _18 9.csv  4_10 1.csv  4_10 10.csv  4_10 10_filtered.csv  4_10 11.csv  4_10 11_filtered.csv  4_10 12.csv  4_10 12_filtered.csv  4_10 13.csv  4_10 13_filtered.csv  4_10 14.csv  4_10 14_filtered.csv  4_10 15.csv  4_10 15_filtered.csv  4_10 16.csv  4_10 1_filtered.csv  4_10 2.csv  4_10 2_filtered.csv  4_10 3.csv  4_10 3_filtered.csv  4_10 4.csv  4_10 4_filtered.csv  4_10 5.csv  4_10 5_filtered.csv  4_10 6.csv  4_10 6_filtered.csv  4_10 7.csv  4_10 7_filtered.csv  4_10 8.csv  4_10 8_filtered.csv  4_10 9.csv  4_10 9_filtered.csv  (+297 more)
data/Dataset/: 4_test.csv  building_tall.csv  dataset_extended_envelope_features.csv  dataset_ultrasonic_se_summary.txt  dataset_ultrasonic_sensor_filtered.csv  faf_fsaf.csv  grid_search_table.csv  obj_  .csv  obj_high.csv  obj_low.csv  object_tall.csv  object_test.csv  pole_short.csv  pole_tall.csv  some_obj.csv  test_99.csv
data/tedt/: r_t.csv  u_1.csv
data/test/: hello_1.csv  io_1.csv  iop_1.csv  u_8.csv
docs/: HeightClassificationInternship.docx
pico-test/scripts/: blinking_led.py  import serial.py  main_serial.py  samples_uss_data.py  test_adc.py  test_uss.py
project/: build_load.bat  build_load_wsl.sh
project-c/: CMakeLists.txt
project-c/app/: CMakeLists.txt
project-c/app/src/: main.c
project-c/blink/: CMakeLists.txt
project-c/lib/: CMakeLists.txt
project-c/lib/include/adc/: adc.h
project-c/lib/src/: adc.c  filter.c
project-c/read_uss_data/: CMakeLists.txt  read_uss_data.c
project-c/test/: CMakeLists.txt
project/app/: CMakeLists.txt
project/lib/: CMakeLists.txt
project/lib/include/adc/: adc.h
project/lib/include/dma/: dma.h
project/lib/include/fft/: fft.h
project/lib/include/filter/: filter.h
project/lib/include/serial/: serial.h
project/lib/src/: adc.c  dma.c  fft.c  filter.c  serial.c
project/test/: CMakeLists.txt
project/test/capture/: CMakeLists.txt  capture_uss_data.c
project/test/read/: CMakeLists.txt  read_uss_data.c
python/data_engineering/: augment_dataset.py  create_training_dataset.py  decision_tree.py  display_peak_info.py  envelope_feature_extraction.py  feature_selection.py  grid_search_random_forests.py  mutual_info_matrix.py  recursive_feature_elimination.py  shap_values.py  tree_based_feature_selection.py  univariate_feature_selection_svm.py  view_dataset.py
python/dataengineering/: create_training_dataframe.py  plot.py
python/machine_learning/: encoder_decoder.py
python/processing/: butterworth.py  connect_pico2.py  detection_rx.py  discrete_hilbert.py  envelope_detection.py  view_analog_signal.py
python/serial_communication/: import_serial.py
python/utils/: utils.py
(+2598 files in other folders)
